--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sudoko-solver",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start:backend": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.18"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
